Last Tablet Code Upload

--- a/Doc Final/1-introduction.tex
+++ b/Doc Final/1-introduction.tex
@@ -7,37 +7,30 @@
 %Estructura del documento (cómo leerlo y seguirlo).%
 %Reconocimieentos / Agradecimientos (si son necesarios).%
 %
-\begin{savequote}[10pc]
-\sffamily
-Smoke whirls\\
-After the passage of a train.\\
-Young foliage.
-\qauthor{Shiki Masaoka (1867-1902)}
-\end{savequote}
+
 \chapter{Introduction}
 %Motivación.%
 For a long time now I've wanted to visit France. Actually, thinking about it, I had that desire before I started to study Systems and Computer Engineering at Universidad de los Andes. Someday I just asked Tiberio about the possibilities of making my thesis abroad. He gave me certain options and one of them was the Institut Image at Chalon-sur-Saône (in which I am writing this Introduction). Since then a few months passed before the bureaucratic nightmare started. 
 
-From the university demanding information they already had, and for which I had to pay a considerable amount of money; to the French Embassy and their Kafkesque process to give me a 5 minutes appointment after weeks of collecting innumerable documents, without taking in account my travel to Brazil to participate in Interactivos? 2010 BH, Christmas and New Year's eve, I thought I wouldn't be able to fly to France in time.  After all it actually happened.
+From the university demanding information they already had, and for which I had to pay a considerable amount of money; to the French Embassy and their Kafkesque process to give me a 5 minutes appointment after weeks of collecting innumerable documents, without taking in account my travel to Brazil to participate in Interactivos? 2010 BH, Christmas and New Year's eve, I thought I wouldn't be able to fly to France in time.  At the end everything came out alright.
 
 The subject of this work was given to me by Frédéric two weeks after my arrival at Chalon. In standard circumstances I prefer my projects to be product of my ideas and not someone else's, but the opportunity to come here for a whole semester easily took over that. Looking backwards, this project has been a great learning opportunity, both personal and professionally.
 
 %Enunciado del problema. Discusión de lo que debería ser una solución.$
 
-The instructions for developing my project were simple and precise: A system for making annotations on 3D models using the cave facilities present at the institute, however usable in a standard computer. The idea is to be able to comment collaboratively and in distant locations a 3D model. The annotations would be simply a plain text comment, with an author and a priority attached. 
+The instructions for developing my project were simple and precise: A system for making annotations on 3D models using the cave facilities present at the institute. The idea is to be able to comment 3D model using immersive facilities. The annotations would be simply a plain text comment, with author, priority and its creation date attached. 
 
-So, as you can see, rather than the traditional way to choosing a thesis I was given a determinate topic and a narrow and precise expected solution. For this reason, in this project, I will work on the possibilities, contexts in which it might be used, constraints and potential scopes of the given solution.
+So, as you can see, rather than the traditional way to choosing a thesis I was given a determinate topic and a narrow and precise expected solution. For this reason, in this project, I will work on the possibilities, contexts in which it might be used, constraints and potential scopes of the given solution and not on the process to propose the problem, as there was none.
 
 %Diseño e implementación.%
-Some of the basic design choices of the solution were given by the facilities present at the Institute. Windows XP running in the cave computers, infrared tracking cameras, passive stereo projections and the Android powered tablet are some examples of these design choices. The software was developed using Microsoft Visual C++ for the software running in the servers and the Eclipse IDE for the tablet application; thus C++ and Java were used to build the solution. OpenSceneGraph and VRPN were also used.
-
-
-
-Aca falta \textbf{Diseño e implementación, Resultados obtenidos. Estructura del documento (cómo leerlo y seguirlo)}
+Some of the basic design choices of the solution were given by the facilities present at the Institute. Windows XP running in the cave computers, infrared tracking cameras, passive stereo projections and the Android powered tablet are some examples of these `design choices'. The software was developed using Microsoft Visual C++ for the part running in the servers and the Eclipse IDE for the tablet application; thus C++ and Java were used to build the solution. OpenSceneGraph and VRPN were also used.
 
 %Resultados obtenidos.%
 
+The project was successfully developed and delivered within the expected time. Though there were significant changes in it's design and there are functionalities not fully implemented, it is still a usable product capable of solving the needs that gave place to it. There is a considerable amount of future work that could be done for improving the project, in case anyone is interested. The core of the application is almost fully developed but the improvements on other aspects would impact deeply the user experience. All the code for this project, and the latex files used to generate this document can be found at $github.com/fpinzn/Thesis$.
+
 %Estructura del documento (cómo leerlo y seguirlo).%
+The structure of this work was given by the standard format used in the Department of Systems and Computer Engineering of the Universidad de los Andes. For this reason, and like with any other document written following such a generic structure, this document features several times the same principles, arguments and ideas with slight changes in redaction, focus and presentation. The reader should go directly to the sections of interest.
 
 %Reconocimieentos / Agradecimientos (si son necesarios).%
-First of all I thank my mother and my sister for supporting me, I know it have been tough. I also thank Tiberio and Frédéric for supervising this work, and giving me this opportunity. Luisa for her friendship and love; David for his friendship and ¿?, and both for their support and our shared memories. Sadly I can't thank God because I don't believe in him, nevertheless I can thank Alan Turing for making this work possible.
+First of all I thank my mother and my sister for supporting me, I know it has been hard. I also thank Tiberio and Frédéric for supervising this work, and giving me this opportunity. David for his friendship, the discussions, links and quality content.
