--- a/Doc Final/2.2-prior_work.tex
+++ b/Doc Final/2.2-prior_work.tex
@@ -2,16 +2,16 @@
 %Describir trabajo previo en el tema y un resumen corto de las torías relacionadas con la solución del problema. Las referencias deben incluir material reciente de artículos publicados.%
 %El uso de URLs (sitios web) no es aconsejado o es considerado en un rango secundario. Puede ser usado en la discusión de asuntos actuales sobre temas sociales, políticos o económicos, citándolos adecuadamente. Se espera que se evalúe la precisión de tal información.%
 \section{Prior Work}
-The most similar prior work I found while making the research for this work is the one presented by {\emph Kadobayaby et al.} in \cite{Kadobayashi}. It's similarity consists in the use of annotations in 3D immersive environments to deal with the inherent complexity of 3D models. The work is nevertheless, restricted by it's use of Croquet. The Croquet Project was a very promising project, now fallen into disregard and oblivion because of the sudden drop of its development. It also provides interesting ideas behind user defined paths inside the VR space that will be addressed later.
+The most similar prior work I found while making the research for this one is presented by {\emph Kadobayaby et al.} in \cite{Kadobayashi}. It's similarity consists in the use of annotations in 3D immersive environments to deal with the inherent complexity of 3D models. The work is nevertheless, restricted by it's use of Croquet. The Croquet Project was a very promising project, now fallen into disregard and oblivion because of the sudden drop of its development. It also provides interesting ideas behind user defined paths inside the VR space that will be addressed later.
 
-This work makes a good case behind the reasons of using a 3D annotation system to move beyond the ``eye-candy'' environment. It also provides a nice definition of annotation, as follows ``Annotations may be thought of as author- attributable content placed within a Croquet scene in association with (or reference to) a particular element of that scene.''. On the other hand it also provides a rather bizarre visualization of these annotations, ``...we have developed basic conventions by which annotations can be created independent of the form of media. We allow objects to become annotation even if the object was not originally designed to be an annotation''. 
+This work makes a good case behind the reasons of using a 3D annotation system to move beyond the ``eye-candy'' phase of the technology. It also provides a nice definition of annotation, as follows: ``Annotations may be thought of as author- attributable content placed within a Croquet scene in association with (or reference to) a particular element of that scene.''. On the other hand it also provides a rather bizarre visualization of these annotations, ``...we have developed basic conventions by which annotations can be created independent of the form of media. We allow objects to become annotation even if the object was not originally designed to be an annotation''. These ideas might be interesting but it's complexity make them hard to work well in a broad context.
 
 The work by {\em Sonnet et al.} \cite{Sonnet} integrates a 3d probe with annotations, giving meaningful information and an exploded view of the 3D model depending of the position of the 3D probe. It uses an automated algorithm to select the best position to display the annotations given both the position of the probe and the centroid of the objet of interest. It also uses handy techniques to navigate the 3D space and isolate important parts of the 3D model. On the other hand it uses complex ways of annotating objects and rare shapes to work as containers of the annotations.
 
-The work by {\em Duval et al.} \cite{Duval} works the possibilities around collaborative explorations of 3D scientific data. The most remarkable parts of it concern the definition of annotations as 3D viewpoints rather than textual information freely located in the space as shown in \cite{Kadobayashi} and \cite{Sonnet}. This idea will be used later in the development of this project. It also uses a minimap to locate the users in the scene similar to the ones featured in the game industry.
+The work by {\em Duval et al.} \cite{Duval} works the possibilities around collaborative explorations of 3D scientific data. The most remarkable parts of it concern the definition of annotations as 3D viewpoints rather than textual information freely located in the space as shown in \cite{Kadobayashi} and \cite{Sonnet}. This idea will be used later in the development of this project\footnote{It actually ended being the selected annotation paradigm.}. It also uses a minimap to locate the users in the scene similar to the ones featured in the game industry.
 
-The work on annotating and sketching on 3D models via a web interface developed by {\em Jung et al.} \cite{Jung} draws interesting lines between the needs behind a post-it metaphor driven annotation system and a more free 3D sketching system. It also raises interesting points around the possible advantages of an asynchronous collaborative system and it's support for a more semantic history of the evolution of the model, versus a real-time voice based discussion system.
+The work on annotating and sketching on 3D models via a web interface developed by {\em Jung et al.} \cite{Jung} draws interesting lines between the needs behind a post-it metaphor driven annotation system and a more free 3D sketching system. It also raises interesting points around the possible advantages of an asynchronous collaborative system and it's support for a semantic history of the evolution of the model, versus a real-time voice based discussion system.
 
-The Chameleon System featured in \cite{3DUI} and explained deeply in \cite{Tsang} explores a similar window metaphor to the one used in this project to allow the user to select his objects of interest to associate to an annotation. However, there are important differences between their work and the one presented in this project, being the most important that the tablet used here is not attached to a mechanical arm to track the movement. Instead it uses an infrared tracking system.
+The Chameleon System featured in \cite{3DUI} and explained deeply in \cite{Tsang} explores a similar window metaphor to the one used in this project to allow the user to select his objects of interest to associate to an annotation. However, there are important differences between their work and the one presented in this project, being the most important that the tablet used here is not attached to a mechanical arm to track the movement; it uses instead an infrared tracking system.
 
-Other sources consulted did not work as prior work but as excellent references for a more specific part of the project. The work by {\em Gonçalves et al.} in their software Tag Around \cite{Goncalves}, concerned with correct tagging and metadata enriching of photos, proposes an interesting approach to usability tests focused in non conventional interaction. The work by {\em Burton et al.}\cite{Burton} and by {\em Bernheim et al.}\cite{Bernheim} presents a really insightful conclusion around collaborative annotation systems, which as summarized in \cite{Jung} should ``be unobtrusive but accessible, inform without overwhelming, separate higher and lower priority information for different actors at different times'', even when their work concerns the annotation of ext documents the principles are extrapolable.
+Other sources consulted did not work as prior work but as excellent references for a more specific part of the project. The work by {\em Gonçalves et al.} in their software Tag Around \cite{Goncalves}, concerned with correct tagging and metadata enriching of photos, proposes an interesting approach to usability tests focused in non conventional interaction. The work by {\em Burton et al.}\cite{Burton} and by {\em Bernheim et al.}\cite{Bernheim} presents a really insightful conclusion around collaborative annotation systems, which as summarized in \cite{Jung} should ``be unobtrusive but accessible, inform without overwhelming, separate higher and lower priority information for different actors at different times'', even when their work concerns the annotation of text documents the principles are extrapolable.
