--- a/Doc Final/2.3-the_problem.tex
+++ b/Doc Final/2.3-the_problem.tex
@@ -4,10 +4,10 @@
 \section{The Problem}
 The root of the problem is the inherent complexity of 3D models. The need to reduce these inherent complexity and expand the models through the use of textual information is the primary concern that gave light to this project. Textual information of a general kind would serve to cast clarity and allow a deeper understanding of the modeled scene. As said in \cite{Kadobayashi} `To be generally useful for collaborative research and learning, immersive virtual 3D spaces must include intuitive content creation and annotation tools'.
 
-The uses of such technology are rather diverse. From enabling educational experiences not possible before, to reducing the time to market via reducing the time to design in a diverse range of manufacturing companies; passing through semantically augmenting architectonic heritage, the potential uses are innumerable.
+The uses of such technology are rather diverse. From enabling educational experiences not possible before, to reducing the time to market new products, via reducing the time to design in a diverse range of manufacturing companies; passing through semantically augmenting architectonic heritage, the potential uses are innumerable.
 
-These potential uses and its associated potential shareholders are still restricted to the access of a cave-like facility given it's high costs. On the other hand, the personal computer version could be used by anyone with access to a standard computer. However, this scenario provides a rather poor experience and similar solutions are already available in the market.
+These potential uses and its associated potential shareholders are still restricted to the access of a cave-like facility given it's high costs. On the other hand, a personal computer version could be used by anyone with access to a standard computer. However, this scenario provides a rather poor experience and similar solutions are already available in the market.
 
-The context of the problem is nevertheless a rather specific one, the facilities of the Institut Image, which devotes most of its attention to educational and research ends. These facilities count with two immersive systems relevant to this work. The first one is the MoVe, a cave-like system with three faces and the floor projecting passive-stereo  images and a IR tracking system with two cameras. The second immersive system is the Spidar, a single screen projected as well with passive-stereo images and 4 IR cameras. 
+The context of the problem is nevertheless a rather specific one, the facilities of the Institut Image, which devotes most of its attention to educational and research ends. These facilities count with two immersive systems relevant to this work. The first one is the MoVe, a cave-like system with three faces and the floor projecting passive-stereo  images and a IR tracking system with 4 cameras located on the top of each corner. The second immersive system is the Spidar, a single screen projected as well with passive-stereo images and 4 IR cameras located on the four corners of its single screen and in which the application run at the end. 
 
 As part of the problem definition the requirements of using the C++ programming language, along with OpenSceneGraph, running in various Windows XP machines, were given.
