--- a/Doc Final/3.1-the_problem_definition.tex
+++ b/Doc Final/3.1-the_problem_definition.tex
@@ -8,4 +8,4 @@ This project proposes a solution to Annotate 3D models in a immersive cave-like 
 
 The annotations must be saved using an XML archive, so it can be easily read by any other software. The annotations must show the information in the best displayable way, maximizing readability and relevance. This annotations must be textual comments with priority and author.
 
-The solution also must be able to run in a standard PC running Windows XP. 
+The solution also may be able to run in a standard PC running Windows XP. 
