--- a/Doc Final/5.1-implementation-review.tex
+++ b/Doc Final/5.1-implementation-review.tex
@@ -57,3 +57,5 @@ At the end of the second stage I was given the code made by Philippe that addres
 
 \subsection{Third Stage}
 The third stage begun with the design and programming of the tablet's software. I had a hard time trying to connect the tablet to a WiFi router provided by the Institute's Network Administrator. I decided to buy my own router and start experimenting with video streaming to the tablet, it took me nearly a week to make it work correctly. Another issue that took me more time than I expected was the programming of the 3D Joysticks. 
+
+After some time tweaking the tablet app and the scene streaming a progress meeting was made with Frédéric and Sébastien. After this meeting I had only one week left to implement the parts of the software I avoided during most of the time. I worked hard that last week and ended with a complete solution, and almost the proposed one. As I've already commented, the difference between the application delivered and the one designed is that the delivered application is incapable of create and display the comments as marquees. So the user, to review the annotations must go to the list in the tablet app, and review one by one.
