--- a/Doc Final/thesis.bib
+++ b/Doc Final/thesis.bib
@@ -184,3 +184,33 @@
 	 address = {New York, NY, USA},
 	 keywords = {input devices, interactive graphics, library, peripherals, virtual environments, virtual worlds},
 	} 
+	
+	@book{3DUI,
+	  title={3D user interfaces: theory and practice},
+	  author={Bowman, D.A.},
+	  isbn={9780201758672},
+	  lccn={2004008403},
+	  series={Pearson Education},
+	  url={http://books.google.com/books?id=It5QAAAAMAAJ},
+	  year={2005},
+	  publisher={Addison-Wesley}
+	}
+	
+	@inproceedings{Tsang,
+	 author = {Tsang, Michael and Fitzmaurice, George W. and Kurtenbach, Gordon and Khan, Azam and Buxton, Bill},
+	 title = {Boom chameleon: simultaneous capture of 3D viewpoint, voice and gesture annotations on a spatially-aware display},
+	 booktitle = {Proceedings of the 15th annual ACM symposium on User interface software and technology},
+	 series = {UIST '02},
+	 year = {2002},
+	 isbn = {1-58113-488-6},
+	 location = {Paris, France},
+	 pages = {111--120},
+	 numpages = {10},
+	 url = {http://doi.acm.org/10.1145/571985.572001},
+	 doi = {http://doi.acm.org/10.1145/571985.572001},
+	 acmid = {572001},
+	 publisher = {ACM},
+	 address = {New York, NY, USA},
+	 keywords = {3D navigation, annotation, gesture, spatially-aware display, voice},
+	}
+	
