--- a/Doc Final/title_page_pacho.sty
+++ b/Doc Final/title_page_pacho.sty
@@ -25,7 +25,7 @@
 \thispagestyle{empty}
 \begin{center}
 %\includegraphics[scale=0.65]{A3_CMYK}\\
-%\vspace{2cm}
+\vspace{2cm}
 {\sffamily\Huge \@title}\\
 \vspace{2cm}
 {\rmfamily\Large \@author}\\
@@ -37,8 +37,17 @@
 {\rmfamily Institut Image}\\
 \vspace{2cm}
 {\rmfamily \@date}\\
-\vspace{5cm}
+
 \usebox{\acidfreepaper}
+\newpage
+
+
+
+\begin{center}
+
+\includegraphics[scale=0.75]{Images/cc_logo.png}
+\end{center}
+\vspace{5cm}
 {\rmfamily{\scriptsize This work is licensed under the Creative Commons Attribution-NonCommercial-ShareAlike 2.0 France License. To view a copy of this license, visit http://creativecommons.org/licenses/by-nc-sa/2.0/fr/ or send a letter to Creative Commons, 444 Castro Street, Suite 900, Mountain View, California, 94041, USA.}}
 \end{center}
 \cleardoublepage
