--- a/README.mediawiki
+++ b/README.mediawiki
@@ -24,4 +24,4 @@ Fisrt of all, you have to guarantee all the computers involved are in the same n
 
 '''In each computer running the C++ program''': When I made the tests of the program it just ran in one PC, but if you have several screens in your immersive system you will have to run the same program in each of the computers. Is exactly the same executable, the only thing that changes is the configuration file. The configuration file is called moveConfig.txt. The face parameter on this file sets the face that will be rendered by the app. The codes are: -1 for the tablet, 0 for the center, 1 for the left, 2 for the right and 3 for the bottom screen. The tabletIp parameter sets the ip of the tablet (where the render stream will be sent), it only matters if the screen id is -1. The IP of the VRPN server is hardcoded in the source. 
 
-''In the values.xml file on the Tablet project'': The VRPN Server IP must be set in here, as well as the connection port, the incoming UDP port for the streaming, and the XML Server port that is a part of the project that doesn't fully work.
+'''In the values.xml file on the Tablet project''': The VRPN Server IP must be set in here, as well as the connection port, the incoming UDP port for the streaming, and the XML Server port that is a part of the project that doesn't fully work.
